// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`is the speech quote valid All items need to have a person 1`] = `
Object {
  "person": Any<String>,
  "quote": "TEST",
  "year": 2001,
}
`;

exports[`is the speech quote valid All items need to have a person 2`] = `
Object {
  "person": Any<String>,
  "quote": "T32312",
  "year": 2001,
}
`;

exports[`is the speech quote valid All items need to have a quote 1`] = `
Object {
  "person": "",
  "quote": Any<String>,
  "year": 2001,
}
`;

exports[`is the speech quote valid All items need to have a quote 2`] = `
Object {
  "person": "",
  "quote": Any<String>,
  "year": 2001,
}
`;

exports[`is the speech quote valid All items need to have a year 1`] = `
Object {
  "person": "",
  "quote": "TEST",
  "year": Any<Number>,
}
`;

exports[`is the speech quote valid All items need to have a year 2`] = `
Object {
  "person": "",
  "quote": "T32312",
  "year": Any<Number>,
}
`;
